# Smart-Grid

./: README.md
clientes/cpp_client/: CMakeLists.txt  README.md
clientes/cpp_client/src/: api_client.hpp  display.hpp  main.cpp
clientes/python_client/: README.md  main.py
servidor+simuladorESP/: README.md  pom.xml
servidor+simuladorESP/src/main/java/com/smartgrid_server/smartgrid/: SmartgridApplication.java
servidor+simuladorESP/src/main/java/com/smartgrid_server/smartgrid/config/: CorsConfig.java  GlobalExceptionHandler.java
servidor+simuladorESP/src/main/java/com/smartgrid_server/smartgrid/device/controller/: DeviceController.java
servidor+simuladorESP/src/main/java/com/smartgrid_server/smartgrid/device/dto/: CommandRequest.java  CommandResponse.java  DeviceDetailDTO.java  DeviceSummaryDTO.java  MeasurementDTO.java
servidor+simuladorESP/src/main/java/com/smartgrid_server/smartgrid/esp/: EspSimulatorApplication.java
servidor+simuladorESP/src/main/java/com/smartgrid_server/smartgrid/mqtt/: MqttGateway.java  MqttJsonCodec.java  MqttProperties.java  MqttTelemetrySubscriber.java  MqttTopics.java
servidor+simuladorESP/src/main/resources/: application.properties
servidor+simuladorESP/src/test/java/com/smartgrid_server/smartgrid/: SmartgridApplicationTests.java
src/main/: Main.java
src/main/cliente/: Cliente.java  ClienteProxy.java
src/main/entidade/: ClienteTCP.java  Comando.java  Controlador.java  Dispositivo.java  EspSimulator.java  Medicao.java  Medidor.java  Reply.java  Sensor.java  ServerSimulator.java
src/main/remoto/: ServicoMedicao.java  ServicoTomada.java
src/main/services/: MedicaoService.java
src/main/servidor/: ServicoMedicaoImpl.java  ServicoTomadaImpl.java  Servidor.java
src/main/streams/: ComandoInputStream.java  ComandoOutputStream.java  MedicaoInputStream.java  MedicaoOutputStream.java
src/main/testes/: SerializationClient.java  SerializationServer.java  TestInput.java  TestOutput.java
(+8 files in other folders)
